fix z-index

--- a/#010/css/style.css
+++ b/#010/css/style.css
@@ -15,8 +15,6 @@ header {
     padding: 0 2rem;
 
     box-shadow: 0 0 8px gray;
-
-    z-index: 1;
 }
 
 /* clearfix */
@@ -80,7 +78,7 @@ nav {
 
     box-shadow: 0 0 8px lightgray;
 
-    z-index: 0;
+    z-index: -1;
 }
 
 .dropdown:hover .dropdown-content { display: block; }
@@ -108,8 +106,6 @@ footer {
     padding: 1rem;
 
     text-align: center;
-    
-    z-index: 0;
 }
 
 address { font-style: normal; }
